--- a/css/main.css
+++ b/css/main.css
@@ -1095,7 +1095,8 @@ p {
 .hero {
   margin-left: auto;
   margin-right: auto;
-  padding: 188px 15px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: var(--color-primary-grey);
   text-align: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-background-mobile.jpg);
