--- a/sass/layout/main-page/_hero-section.scss
+++ b/sass/layout/main-page/_hero-section.scss
@@ -3,7 +3,8 @@ $gradient-background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.
 .hero {
   margin-left: auto;
   margin-right: auto;
-  padding: 188px 15px;
+  padding-top: 118px;
+  padding-bottom: 118px;
 
   background-color: var(--color-primary-grey);
   text-align: center;
